# trabEstatistica

./: README.md  notebook.ipynb  pyproject.toml
