[tool.poetry]
name = "trab-estatistica"
version = "0.1.0"
description = ""
authors = ["carloshl <carlosh_l@poli.ufrj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
